--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </nav>
     <main id="main">  
         <h1>Farm Animals</h1>
-        <img class="pic1" src="/media/home_pic1.jpg" alt="Cows standing in grassy field with hills, trees and clouds in the background"></img>
+        <img class="pic1" src="./media/home_pic1.jpg" alt="Cows standing in grassy field with hills, trees and clouds in the background"></img>
         <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
         <h2 id="know-more">Want to know more?</h2>
         <p>Please select the adorable farm animal you would like to know better</p>
