--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         <h2 id="know-more">Want to know more?</h2>
         <p>Please select the adorable farm animal you would like to know better</p>
         <div class="animal-select">
-          <a class="animal-link" href="/cow/cow.html"><img class="animal" alt="cow" src="/media/cow_home.jpg"></a>
+          <a class="animal-link" href="/cow/cow.html"><img class="animal" alt="cow" src="media/cow_home.jpg"></a>
           <!--Cow image courtesy of Alaina McLearnon from https://unsplash.com/photos/white-and-black-cow-on-grass-field-P_t9mRLFoRs-->
-          <a class="animal-link" href="/horse/horse.html"><img class="animal" alt="#" src="/media/horse_home.jpg"></a>
+          <a class="animal-link" href="/horse/horse.html"><img class="animal" alt="#" src="media/horse_home.jpg"></a>
           <!--Horse image courtesy of Pieter van Noorden from https://unsplash.com/photos/brown-and-white-horse-head-cjSUZMA2iW8-->
-          <a class="animal-link" href="/goat/goat.html"><img class="animal" src="/media/goat_home.jpg"></a>
+          <a class="animal-link" href="/goat/goat.html"><img class="animal" src="media/goat_home.jpg"></a>
           <!--Goat image courtesy of Peter Lloyd from https://unsplash.com/photos/shallow-focus-photography-of-white-and-black-goat-o96Lf_wuM5o-->
         </div>
         <div id="spacer" aria-label="horizontal spacer"></div>
@@ -49,13 +49,13 @@
           <button>Submit</button>
           <div class="flex-slide">
             <button class="slideshow-button-left" onclick="plusDivs(-1)" aria-label="previous">&#10094;</button> 
-            <img id="carousel-animal" class="mySlides first-slide" src="/media/chicken_carousel.jpg" alt="brown chicken walking across green grass"> 
+            <img id="carousel-animal" class="mySlides first-slide" src="media/chicken_carousel.jpg" alt="brown chicken walking across green grass"> 
             <!--Chicken carousel image courtesy of James Wainscoat from https://unsplash.com/photos/brown-chicken-on-green-grass-field-during-daytime-yEW23jxVsNI-->
-            <img id="carousel-animal" class="mySlides" src="/media/sheep_carousel.jpg" alt="white sheep looking into camera standing in fron of herd">
+            <img id="carousel-animal" class="mySlides" src="media/sheep_carousel.jpg" alt="white sheep looking into camera standing in fron of herd">
             <!--Sheep carousel image courtesy of Sam Carter from https://unsplash.com/photos/white-sheep-on-green-grass-during-daytime-GHOiyov2TSQ-->
-            <img id="carousel-animal" class="mySlides" src="/media/duck_carousel.jpg" alt="duck with beak open looking at camera">
+            <img id="carousel-animal" class="mySlides" src="media/duck_carousel.jpg" alt="duck with beak open looking at camera">
             <!--Duck carousel image courtesy of Ross Sokolovski from https://unsplash.com/photos/brown-and-white-duck-on-gray-concrete-floor-kCZSzqvIei4-->
-            <img id="carousel-animal" class="mySlides" src="/media/donkey_carousel.jpg" alt="donkey standing behind an ivy fence with ears standing up">
+            <img id="carousel-animal" class="mySlides" src="media/donkey_carousel.jpg" alt="donkey standing behind an ivy fence with ears standing up">
             <!--Donkey carousel image courtesy of Virginia Long from https://unsplash.com/photos/brown-horse-Yh2HnPoGbPw-->
             <button class="slideshow-button-right" onclick="plusDivs(+1)" aria-label="next">&#10095;</button>
           </div>
