--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         <h2 id="know-more">Want to know more?</h2>
         <p>Please select the adorable farm animal you would like to know better</p>
         <div class="animal-select">
-          <a class="animal-link" href="/cow/cow.html"><img class="animal" alt="cow" src="media/cow_home.jpg"></a>
+          <a class="animal-link" href="cow/cow.html"><img class="animal" alt="cow" src="media/cow_home.jpg"></a>
           <!--Cow image courtesy of Alaina McLearnon from https://unsplash.com/photos/white-and-black-cow-on-grass-field-P_t9mRLFoRs-->
-          <a class="animal-link" href="/horse/horse.html"><img class="animal" alt="#" src="media/horse_home.jpg"></a>
+          <a class="animal-link" href="horse/horse.html"><img class="animal" alt="#" src="media/horse_home.jpg"></a>
           <!--Horse image courtesy of Pieter van Noorden from https://unsplash.com/photos/brown-and-white-horse-head-cjSUZMA2iW8-->
-          <a class="animal-link" href="/goat/goat.html"><img class="animal" src="media/goat_home.jpg"></a>
+          <a class="animal-link" href="goat/goat.html"><img class="animal" src="media/goat_home.jpg"></a>
           <!--Goat image courtesy of Peter Lloyd from https://unsplash.com/photos/shallow-focus-photography-of-white-and-black-goat-o96Lf_wuM5o-->
         </div>
         <div id="spacer" aria-label="horizontal spacer"></div>
