--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="index.js"></script>
     <div id="header" class="header">
         <a class="skip" href="#main">Skip to content</a>    
-        <a class="logo" href="home.html"><h1>Farm Animals</h1></a>
+        <a class="logo" href="index.html"><h1>Farm Animals</h1></a>
         <ul class="navbar" aria-label="navigation">
             <a href="cow/cow.html"><li class="nav">Cow</li></a>
             <a href="horse/horse.html"><li class="nav">Horse</li></a>
