--- a/goat/goat.html
+++ b/goat/goat.html
@@ -11,7 +11,7 @@
   <body>
     <div id="header" class="header">
         <!--<a class="skip" href="#main">Skip to content</a>-->    
-        <a class="logo" href="../home.html" autofocus><h1>Farm Animals</h1></a>
+        <a class="logo" href="../index.html" autofocus><h1>Farm Animals</h1></a>
         <ul class="navbar" aria-label="navigation">
             <a href="../cow/cow.html"><li class="nav">Cow</li></a>
             <a href="../horse/horse.html"><li class="nav">Horse</li></a>
