--- a/cow/cow.html
+++ b/cow/cow.html
@@ -80,6 +80,6 @@
           <a href="https://www.instagram.com/" target="_blank" aria-label="Instagram"><div class="fa fa-instagram"></div></a>
         </div>
     </footer>
-    <script src="/cow/index.js"></script>
+    <script src="cow/index.js"></script>
   </body>
 </html>
