--- a/cow/cow.html
+++ b/cow/cow.html
@@ -22,14 +22,14 @@
     <div id="main">
       <!--audio courtesy of user tdes and downloaded from https://freesound.org/people/tdes/sounds/126358/-->
         <audio autoplay>
-          <source src="media/126358__tdes__herd-of-cows-mooing.wav" type="audio/wav">
+          <source src="../media/126358__tdes__herd-of-cows-mooing.wav" type="audio/wav">
           Your browser does not support this audio file
         </audio> 
         <h1>Cow</h1>
         <p aria-hidden="true">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
         <h2 id=>Click on Moogana the wise for the word of the day!</h2>
         <div id="moogana" class="animal-link">
-          <img class="animal" src="media/cow_wise_words.jpg" alt="moogana the wise">
+          <img class="animal" src="../media/cow_wise_words.jpg" alt="moogana the wise">
           <!--image courtesy of Kseniya Konovets from https://unsplash.com/photos/brown-cow-on-gray-sand-during-daytime-rB734RW4xdE-->
         </div>
 
