--- a/horse/horse.html
+++ b/horse/horse.html
@@ -45,7 +45,7 @@
             <dialog id="auth-hq">
               <p id="time-output-hq"></p>
               <p>Please solve for x</p>
-              <img src="/media/accessibility_website_authorization.png">
+              <img src="../media/accessibility_website_authorization.png">
             </dialog>
           </form>
           <h3>Morse Code & Horses</h3>
@@ -67,7 +67,7 @@
             <dialog id="auth-mch">
               <p id="time-output-mch"></p>
               <p>Please solve for x</p>
-              <img src="/media/accessibility_website_authorization.png">
+              <img src="../media/accessibility_website_authorization.png">
             </dialog>
           </form>
         </div>
