--- a/horse/horse.html
+++ b/horse/horse.html
@@ -73,7 +73,7 @@
         </div>
         <button id="open-popup">open</button>
         <div id="div-popup">
-          <p id="text-popup">this is a test</p>
+          <p id="text-popup">Observe that even with this popup triggered fields behind this popup can be tabbed to</p>
           <button id="close-popup">close</button>
         </div>
     </main>
