--- a/goat/goat.html
+++ b/goat/goat.html
@@ -24,7 +24,7 @@
         <p>Goats have a certain <b>Je ne c'est quoi</b> that makes them truly excellent.</p>
         <dialog id="magic-goat-modal">
           <h3>Behold Bleetus the goat</h3>
-          <img id="magic-goat" class="modal-pic" src="/media/goat_home.jpg">
+          <img id="magic-goat" class="modal-pic" src="../media/goat_home.jpg">
           <!--image courtesy of Peter Lloyd from https://unsplash.com/photos/shallow-focus-photography-of-white-and-black-goat-o96Lf_wuM5o-->
           <p>Move the slider and watch him disappear!</p>
           <input id="goat-slider" type="range" min="0" max="100" value="100">
@@ -34,7 +34,7 @@
 
         <dialog id="surprise-goat-modal">
           <h3>Behold Bleetus the goat</h3>
-          <img class="modal-pic" src="/media/goat_home.jpg">
+          <img class="modal-pic" src="../media/goat_home.jpg">
           <!--image courtesy of Peter Lloyd from https://unsplash.com/photos/shallow-focus-photography-of-white-and-black-goat-o96Lf_wuM5o-->
           <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
           <button id="surprise-close-modal">Close</button>
